--- a/.env.example
+++ b/.env.example
@@ -6,5 +6,6 @@ DB=
 SECRET=
 HEADER_CODE=
 PORT=3000
-DISCORD_API=https://discord.com/api/
+DISCORD_API=https://discord.com/api/v9/
 BOT_TOKEN=
+INVITE=
