--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "connect-mongo": "^4.6.0",
     "cookies": "^0.8.0",
     "cors": "^2.8.5",
+    "discord.js": "^13.6.0",
     "dotenv": "^16.0.0",
     "ejs": "^3.1.6",
     "express": "^4.17.3",
@@ -22,7 +23,7 @@
   "main": "src/server.ts",
   "type": "module",
   "scripts": {
-    "start": "ts-node-dev --rs --clear --respawn --transpile-only --poll ./src/server.ts"
+    "dev": "ts-node-dev --rs --clear --respawn --transpile-only --poll ./src/server.ts"
   },
   "keywords": [],
   "author": "",
