🚀 Added option to change user bio, fixed some errors. Need to work on search system

--- a/.env.example
+++ b/.env.example
@@ -9,3 +9,7 @@ PORT=3000
 DISCORD_API=https://discord.com/api/v9/
 BOT_TOKEN=
 INVITE=
+KEY=
+WEBHOOK_URL=
+WEBHOOK_ID=
+WEB_URL=http://localhost:3000
