--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
     "@types/passport": "^1.0.7",
     "@types/passport-discord": "^0.1.5",
     "axios": "^0.26.1",
+    "body-parser": "^1.19.2",
     "connect-mongo": "^4.6.0",
     "cookies": "^0.8.0",
     "cors": "^2.8.5",
@@ -12,6 +13,7 @@
     "express": "^4.17.3",
     "express-session": "^1.17.2",
     "glob": "^7.2.0",
+    "method-override": "^3.0.0",
     "mongoose": "^6.2.7",
     "passport": "^0.5.2",
     "passport-discord": "^0.1.4",
